# pmm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  changelog.cmake  ci.cmake  ci.ps1  conanfile.py  conanfile.txt  do-docker.ps1  index.html  latest-info.cmake  latest-version.cmake  pmm.cmake  prep-release.ps1  pyproject.toml
0.1.0/: entry.cmake  main.cmake
0.2.0/: conan.cmake  entry.cmake  util.cmake
0.3.0/: conan.cmake
0.3.1/: main.cmake
0.4.0/: entry.cmake  main.cmake
1.0.1/: conan.cmake  main.cmake  python.cmake
1.0.3/: conan.cmake  python.cmake
1.1.0/: entry.cmake
1.1.1/: vcpkg.cmake
1.2.0/: entry.cmake  main.cmake
1.3.0/: conan.cmake  main.cmake
1.3.1/: cmcm.cmake  conan.cmake  entry.cmake  util.cmake
1.4.0/: util.cmake
1.4.1/: conan.cmake  dds.cmake
1.4.3/: python.cmake
1.5.0/: cmcm.cmake
1.5.1/: main.cmake
2.0.0/: entry.cmake  main.cmake
2.1.0/: dds.cmake  main.cmake  vcpkg.cmake
ci/: __init__.py  fxt.py
pmm/: bpt.cmake  cmcm.cmake  conan.cmake  conan.settings.py  dds.cmake  entry.cmake  main.cmake  python.cmake  util.cmake  vcpkg.cmake
tests/: BuildContainer.cmake  BuildTestProject.cmake  CMakeLists.txt  RunDockerTest.cmake  conftest.py  test_bpt.py
tests/alpine.docker/: Dockerfile
tests/c7.docker/: Dockerfile
tests/c8.docker/: Dockerfile
tests/ci/: CMakeLists.txt  RunCITest.cmake
tests/ci/cmcm/: CMakeLists.txt
tests/ci/conan/: CMakeLists.txt  conanfile.py  main.cpp
tests/ci/dds/: CMakeLists.txt  deps.jsonc  test-catalog.jsonc  test.cpp
tests/ci/vcpkg/: CMakeLists.txt  main.cpp
tests/ci/vcpkg-overlay/: CMakeLists.txt  main.cpp
tests/ci/vcpkg-overlay/custom-ports2/nlohmann-json/: portfile.cmake  vcpkg.json
tests/ci/vcpkg-overlay/custom-ports2/spdlog-pmm/: portfile.cmake  vcpkg.json
tests/conan.test-project/: CMakeLists.txt
tests/dds.test-project/: CMakeLists.txt  main.cpp
tests/default-project/: CMakeLists.txt  conanfile.py
tests/u12.docker/: Dockerfile
tests/u14.docker/: Dockerfile
tests/u16.docker/: Dockerfile
tests/u18-vcpkg.docker/: Dockerfile
tests/u18-vcpkg.docker/project/: CMakeLists.txt
tests/u18.docker/: Dockerfile
tests/u20-cm3_20.docker/: Dockerfile
tests/u20.docker/: Dockerfile
tests/vcpkg.test-project/: CMakeLists.txt
